refactor(user): User handlers use middleware
- Modified user-related handlers (recipes, favorites, ratings) to stop retrieving user ID from path parameters.
- Instead, handlers now rely on the userID provided by JWT middleware.
- This change enhances security by preventing access to other users' data and simplifies route definitions."
